# Machine-Learning

./: pyproject.toml
01-Linear_Regression/: main.ipynb
02-Ridge_and_LassoRegression/: main.ipynb
03-Logistic_Regression/: main.ipynb
04-Descision_tree/: DecisionTreeRegression.ipynb  post_prunning.ipynb  pre_prunning.ipynb
05-EDA/: automated_eda.ipynb  main.html
06-Unsupervised/: DBScan.ipynb  Hierarichal.ipynb  kmeans.ipynb
